crates/tests/libs/bindgen/data/error/guid_no_args/input.rdl

#[win32]
mod Test {
    #[guid]
    interface IFoo {}
}
        